# tiralabra

./: .clippy.toml  .rustfmt.toml  Cargo.toml  LICENSE  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/actions-rs/: grcov.yml
.github/workflows/: coverage.yml  rustdoc.yml
bench/: Cargo.toml
bench/benches/: correlation_match_performance.rs  fft_performance.rs
correlation_track/: all.html  fn.parabolic_interpolation_minimum.html  index.html  sidebar-items.js  struct.CorrelationMatch.html  struct.CrossCorrelation.html  struct.DisplayBuffer.html  trait.Float.html
correlation_track/correlation_match/: struct.CorrelationMatch.html
correlation_track/cross_correlation/: struct.CrossCorrelation.html
correlation_track/display/: struct.DisplayBuffer.html
correlation_track/float/: trait.Float.html
correlation_track/ring_buffer/: fn.with_capacity.html  index.html  sidebar-items.js  struct.Consumer.html  struct.Producer.html  trait.Item.html
correlation_track/util/: fn.shift_left.html  fn.shift_left_fill.html  fn.shift_right.html  fn.shift_right_fill.html  index.html  struct.IterWindows.html
doc/: index.md  määrittelydokumentti.md
dokumentaatio/: käyttöohje.md  parabolic_interpolation_formulas.py  testausdokumentti.md  toteutusdokumentti.tex  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md
examples/: demo.rs  theme.css
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/test_signal/: mod.rs
implementors/correlation_track/: trait.Float.js
implementors/tiralabra/: trait.Float.js
src/: correlation_match.rs  cross_correlation.rs  display.rs  fft.rs  float.rs  lib.rs  main.rs  math.rs  ring_buffer.rs  util.rs
src/correlation_match/: parabolic_interpolation.rs
src/correlation_track/: correlation_match.rs.html  cross_correlation.rs.html  display.rs.html  float.rs.html  lib.rs.html  ring_buffer.rs.html  util.rs.html
src/test/: mod.rs  test_correlation_match.rs  test_cross_correlation.rs  test_fft.rs  test_math.rs  test_ring_buffer.rs  test_util.rs  util.rs
src/tiralabra/: correlation_match.rs.html  cross_correlation.rs.html  display.rs.html  fft.rs.html  float.rs.html  (+5 more)
suorituskyky/: plot_parametrized_comparison.py
tiralabra/: all.html  fn.main.html  fn.parabolic_interpolation_minimum.html  index.html  sidebar-items.js  struct.CorrelationMatch.html  struct.CrossCorrelation.html  struct.DisplayBuffer.html  struct.Fft.html  trait.Float.html
(+62 files in other folders)
