[package]
name = "tiralabra"
version = "0.1.0"
authors = ["Roope Salmi <rpsalmi@gmail.com>"]
edition = "2018"

[dependencies]
tuix = { git = "https://github.com/geom3trik/tuix", branch = "experiment", optional = true }
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master", default-features = false, optional = true }
cpal = { version = "0.13", optional = true }
triple_buffer = { version = "5.0", optional = true }

[dev-dependencies]
rand = { version = "0.8", default-features = false, features = ["std", "small_rng"] }

[features]
gui = ["tuix", "femtovg", "cpal", "triple_buffer"]
default = ["gui"]

[[example]]
name = "demo"
required-features = ["gui"]

